# back-end/local-app/src/main/java/br/com/novaalianca/mnss/localapp/security/user/RoleEntity.java
@@ -1,31 +1,19 @@
 package br.com.novaalianca.mnss.localapp.security.user;
 
+import br.com.novaalianca.mnss.localapp.domain.shared.BaseEntity;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.Id;
 import jakarta.persistence.Table;
-import java.time.Instant;
 import java.util.UUID;
 
 @Entity
 @Table(name = "roles")
-public class RoleEntity {
-    @Id
-    @GeneratedValue
-    private UUID id;
-
+public class RoleEntity extends BaseEntity {
     @Column(nullable = false, unique = true, length = 50)
     private String name;
 
     @Column(length = 255)
     private String description;
-
-    @Column(nullable = false)
-    private Instant createdAt = Instant.now();
-
-    @Column(nullable = false)
-    private Instant updatedAt = Instant.now();
 
     protected RoleEntity() {
     }
@@ -33,10 +21,6 @@ public class RoleEntity {
     public RoleEntity(RoleName name, String description) {
         this.name = name.name();
         this.description = description;
-    }
-
-    public UUID getId() {
-        return id;
     }
 
     public RoleName getName() {
